--- a/Tela-Promocao/estilo.css
+++ b/Tela-Promocao/estilo.css
@@ -3,28 +3,82 @@ body {
     padding: 25px;
 }
 
+p.p1 {
+  margin: 0;
+  margin-top: 2px;
+}
+
+.input{
+  font-family: Arial, Helvetica, sans-serif;
+  width: 300px;
+  -moz-box-sizing : border-box;
+  box-sizing: border-box;
+
+}
+
+.radio{
+  display: none;
+
+}
+
+.principal{
+  margin: 25%;
+  margin-top: 10%;
+}
+
 .titulo{
     font-family: Ubuntu, sans-serif;
-    color: darkblue;
-    font-size: 40px;
+    color: #003260;
+    font-size: 26px;
 }
 
 .texto{
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 16px;
+    font-size: 14px;
+    color: #7E939E;
+    
 }
 
 .texto2{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 14px;
+    color: #7E939E;
+}
+
+.termos {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 14px;
+  color:#7E939E;
+  position: relative;
+}
+
+.termos input:{
+  cursor: pointer;
+}
+
+.termos input:checked {
+  background-color: #268FCC;
+}
+
+.input{
+  width: 45%;
+ float: left
+}
+
+.botao{
+  width: 45%;
+ float: left;
+  
 }
 
 .button{
     background-color:red;
     color: white;
+    font-size: 14px;
     border: 2px solid white;
-    border-radius: 4px;
-    padding: 14px 50px; 
+    border-radius: 10px;
+    padding: 14px 80px;
+    
 }
 
 .promo-methods {
@@ -42,23 +96,26 @@ body {
   border: 1px solid #ccc;
   box-sizing: border-box;
   float: left;
-  height: 70px;
+  height: 60px;
   position: relative;
-  width: 120px;
+  width: 30%;
+  border-radius: 5px;
 }
 
 .promo-method label {
-  background: #fff no-repeat center center;
-  bottom: 1px;
+  background: no-repeat center center;
+  bottom: -1px;
   cursor: pointer;
   display: block;
   font-size: 0;
-  left: 1px;
+  left: -1px;
   position: absolute;
-  right: 1px;
+  right: -1px;
   text-indent: 100%;
-  top: 1px;
+  top: -1px;
   white-space: nowrap;
+  border-radius: 5px;
+
 }
 
 .promo-method + .promo-method {
@@ -66,33 +123,171 @@ body {
 }
 
 .email label {
-    background-image: url('imagem/icon_newsletter.svg');
-  }
-  
+  background: url('imagem/icon_newsletter.svg') no-repeat 10% 50%; 
+  background-size: 15%;
+  text-decoration: #268FCC;
+
+}
+
 .sms label {
-    background-image: url('imagem/icon_message.svg');
+    background: url('imagem/icon_message.svg') no-repeat 10% 50%;
+    background-size: 15%;
+    text-decoration: #268FCC;
 }
 
 .watts label {
-    background-image: url('imagem/icon_whatsapp.svg');
+    background: url('imagem/icon_whatsapp.svg') no-repeat 10% 50%;
+    background-size: 15%;
 }
   
 .promo-methods input:focus + label {
-   outline: 2px dotted #21b4d0;
+   border: 2px dotted #268FCC;
+   border-radius: 5px;
  }
   
-.promo-methods input:checked + label {
-    outline: 4px solid #21b4d0;
+.promo-methods .email input:checked + label {
+  background: url('imagem/icon_newsletter_color.svg') no-repeat 10% 50%; 
+  background-size: 15%;
+  border: 1px solid #268FCC;
+  border-radius: 5px;
+ 
 }
-  
+.promo-methods .email input:checked ~ label ~ h5 {
+  color: #268FCC;
+  border-radius: 5px;
+}
+
+.promo-methods .sms input:checked + label {
+  background: url('imagem/icon_message_color.svg') no-repeat 10% 50%; 
+  background-size: 15%;
+  border: 1px solid #268FCC;
+  border-radius: 5px;
+}
+
+.promo-methods .sms input:checked ~ label ~ h5 {
+  color: #268FCC;
+}
+
+.promo-methods .watts input:checked + label {
+  background: url('imagem/icon_whatsapp_color.svg') no-repeat 10% 50%; 
+  background-size: 15%;
+  border: 1px solid #268FCC;
+  border-radius: 5px;
+}
+
+.promo-methods .watts input:checked ~ label ~ h5 {
+  color: #268FCC;
+}
+
 .promo-methods input:checked + label:after {
-    bottom: -10px;
     content: "";
     display: inline-block;
     height: 20px;
     position: absolute;
-    right: -10px;
-    width: 20px;
 }
 
+.email h5 {
+  margin: 10% 10% 10% 45%;
+  color: darkgrey;
+  font-family: Ubuntu, sans-serif;  
+}
+
+.sms h5{
+  margin: 10% 10% 10% 45%;
+  color: darkgrey;
+  font-family: Ubuntu, sans-serif;  
+}
+
+.watts h5{
+  margin: 10% 10% 10% 45%;
+  color: darkgrey;
+  font-family: Ubuntu, sans-serif;  
+}
+
+.hr {
+  color: #D2DCDE;
+}
+
+.dotted{
+  color: #D2DCDE;
+  border-style: dotted;
+  margin-top: 25px;
+  margin-bottom: 20px;
+}
+
+.mail-address{
+  color:gray;
+  height: 30px;
+  width:  300px;
+  border-bottom-color: #FFFFFF;
+}
+
+.celular{
+  color:gray;
+  height: 30px;
+  width:  300px;
+ border-bottom-color: #FFFFFF;
+ border-color: 1px #D2DCDE ;
   
+}
+
+.checkboxcontainer input{
+  display: none;
+}
+
+.checkboxcontainer{
+  display: inline-block;
+  padding-left: 30px;
+  position: relative;
+  cursor: pointer;
+  font-family: sans-serif;
+  font-size: 14px;
+  user-select: none;
+  border-bottom-color: black;
+  border-top-width: 10px;
+
+}
+
+.checkboxcontainer .checkmark{
+   display: inline-block;
+   height: 18px;
+   width: 18px;
+   background-color:#cccc;
+   position: absolute;
+   left: 0%;
+   top: 0%;
+   border-radius: 3px;
+   margin-top: -1px;
+ 
+}
+
+.checkboxcontainer input:checked + .checkmark{
+  background-color: #268FCC; 
+}
+
+.checkboxcontainer:hover .checkmark{
+  background-color: #cccc;
+}
+
+.checkboxcontainer input:checked + .checkmark::after{
+  content: " ";
+  position: absolute;
+  height: 4px;
+  width: 9px;
+  border-left: 2px solid white;
+  border-bottom: 2px solid white;
+  top: 50%;
+  left: 50%;
+  transform:translate(-50%,-50%) rotate(-45deg);
+}
+
+.termos2{
+  padding-top: 20px;
+}
+
+.link1{
+  font-size: 14px;
+  font-family: Ubuntu, sans-serif;
+  color: #268FCC;
+  
+}
