--- a/Tela-Promocao/estilo.css
+++ b/Tela-Promocao/estilo.css
@@ -61,14 +61,12 @@ p.p1 {
 }
 
 .input{
-  width: 45%;
+  width: 100%;
+  border-color: 1px #D2DCDE;
  
 }
 
-.botao{
-  width: 45%;
- 
-}
+
 
 .button{
     background-color:red;
@@ -76,10 +74,9 @@ p.p1 {
     font-size: 14px;
     border: 2px solid white;
     border-radius: 10px;
-    padding: 14px 80px;
-    /* margin-left: 318px;
-    margin-top: -15px; */
-    
+    padding: 15px 59px;
+    margin-left: 8px;
+
 }
 
 .promo-methods {
@@ -218,18 +215,19 @@ p.p1 {
 
 .mail-address{
   color:gray;
-  height: 30px;
-  width:  300px;
-  border-bottom-color: #FFFFFF;
+  height: 40px;
+  width:  204px;
+  border-color: 1px #D2DCDE ;
+  padding: 1px 5px;
 }
 
 .celular{
   color:gray;
-  height: 30px;
-  width:  300px;
- border-bottom-color: #FFFFFF;
+  height: 40px;
+  width: 204px;
  border-color: 1px #D2DCDE ;
-  
+  margin-left: 10px;
+  padding: 1px 5px;
 }
 
 .checkboxcontainer input{
@@ -259,6 +257,7 @@ p.p1 {
    top: 0%;
    border-radius: 3px;
    margin-top: -1px;
+   margin-left: 2px;
  
 }
 
